
[package]
name = "rusty-breakout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty_engine = "5.0.6"
rand = "0.8"

# [profile.dev]
# opt_level = 3
# debug = false
# debug-assertions = false
# overflow-checks = false
# incremental = false
# codegen-units = 16
